# clas12AnaTools

./: CMakeLists.txt  Makefile
BB_Calib/: Draw_2C21_SLM.cc  Draw_2C24_FCup.cc  Draw_FCup_SLM.cc  Initil_SLM_Calib.odp
BB_Calib/10p2_Apr_07_2019/: Draw_calibr.cc
BB_Calib/10p2_Apr_12_2019/: Draw_calibr.cc  tmp
BB_Calib/10p2_Mar_19_2019/: Draw_calibr.cc
BB_Calib/10p7_Jan30_2018/: Draw_calibr.cc  Draw_calibr_cc_ACLiC_dict_rdict.pcm
BB_Calib/6p5_Dec_13_2018/: Draw_calibr.cc
BB_Calib/6p6_Feb7/: Draw_calibr.cc  Draw_calibr_cc_ACLiC_dict_rdict.pcm
BB_Calib/7p5_Dec_3_2018/: Draw_calibr.cc
BB_Calib/Dec19_2019/: Draw_calibr.cc
BB_Calib/Dec_04_2019/: Draw_calibr.cc
BB_Calib/Dec_05_2019/: Draw_calibr.cc
BB_Calib/Dec_10_2021/: Draw_calibr.cc
BB_Calib/Dec_15_2021_LD2/: Draw_calibr.cc
BB_Calib/Dec_17_2021_L4He/: Draw_calibr.cc  Log
BB_Calib/Dec_5_2021/: Draw_calibr.cc  Draw_calibr.cc_BAK  log
BB_Calib/Dec_7_2021/: Draw_calibr.cc
BB_Calib/Feb_01_2022_Empty_6GeV/: Draw_calibr.cc
BB_Calib/Feb_01_2022_Tin_6GeV/: Draw_calibr.cc
BB_Calib/Feb_02_2022_Tin_6GeV/: Draw_calibr.cc
BB_Calib/Feb_04_2022_Ca48_6GeV/: Draw_calibr.cc
BB_Calib/Jan_2018/: 2C21_Current.eps  2C21_FCup_Ratio.C  2C21_FCup_Ratio.eps  2C21_FCup_Ratio_BBOut.C  2C21_FCup_Ratio_BBOut.eps  2C21_FCup_average_Ratio.eps  2C21_FCup_average_Ratio_BBOut.eps  Draw_2C21_SLM.cc  Draw_2C21_SLM_cc_ACLiC_dict.cxx_tmp_30218  Draw_2C21_SLM_cc_ACLiC_dict_rdict.pcm  Draw_FCup_SLM.cc  Draw_FCup_SLM_cc_ACLiC_dict_rdict.pcm  FCup_Curr.eps  SLM_FCup_Ratio.eps  SLM_FCup_Ratio_compare.eps  SLM_FCup_Ratio_raw.eps  SLM_FCup_Ratio_raw_BBIN.C  SLM_FCup_Ratio_raw_BBIN.eps  SLM_FCup_Ratio_time_dep.eps  SLM_calibr_DataTaking.eps  SLM_calibr_global.eps  tmp
BB_Calib/Jan_24_2022_C/: Draw_calibr.cc
BB_Calib/Jan_24_2022_Empty/: Draw_calibr.cc
BB_Calib/Jan_27_2022_Ar/: Draw_calibr.cc
BB_Calib/Jan_30_2022_Empty/: Draw_calibr.cc
BB_Calib/Jul_13_2022_Empty/: Draw_calibr.cc
BB_Calib/Nov_11_2021/: Draw_calibr.cc
BB_Calib/Nov_16_2021/: Draw_calibr.cc
BB_Calib/Nov_18_2021/: Draw_calibr.cc
BB_Calib/Nov_29_2021/: Draw_calibr.cc
BB_Calib/RGD_CuSn_Oct_2023/: Draw_calibr.cc
BB_Calib/RGD_Empty_Oct_2023/: Draw_calibr.cc
CompareHistos/: CompareHistos.cc  CompareHistos.h  LinkDefCompareHistos.h
LUND2Root/: CLAS12LUND2Root.cc  compile_CLAS12LUND2Root.sh
OSG_Validate/: AnaDDVCSOSG.cc  OSG_Validate.cc  RunChain.py  compile_AnaDDVCSOSG.sh
include/: RecParticle.h  clas12AnaTools.h
src/: RecParticle.cc  clas12AnaTools.cc
uRWell/: AnalyzeData.cc  AnalyzeSec6TOFTrg.cc  Analyze_HPSCosmicPMTs.cc  CMakeLists.txt  CheckDecoding.cc  CheckDecoding_CSCh.cc  CheckTrgBits.cc  DrawAnalysisPlots.cc  DrawDecodingPlots.cc  DrawFTofTrgPlots.cc  DrawPedestals.cc  DrawRateVsHV.cc  Makefile  Run_DecodeRecon.sh  SkimZeroSuppression.cc  Skim_Coincidence.cc  Skim_Cross.cc  compile_AnalyzeData.sh  compile_AnalyzeSec6TOFTrg.sh  compile_Analyze_HPSCosmicPMTs.sh  compile_CheckDecoding.sh  compile_CheckDecoding_CSCh.sh  compile_CheckTrgBits.sh  compile_SkimZeroSuppression.sh  compile_Skim_Coincidence.sh  compile_Skim_Cross.sh  evio_event_select.cpp
uRWell/DesignCalculation/: CalcDesign.cc  CalcDesignHybrid_1.cc
uRWell/include/: uRwellTools.h
uRWell/src/: uRwellTools.cc
